--- a/src/style/estilo-banner.css
+++ b/src/style/estilo-banner.css
@@ -75,15 +75,27 @@ button{
           transition: background-color .4s, opacity .4s, color .4s;
 }
 
+.botton-alert{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 10px 20px;
+          font-size: 18px;
+}
 .container{
           width: 100%;
           max-width: 1140px;
           margin-left: auto;
           margin-right: auto;
+          display: flex;
+          align-items: center;
 }
 
 .menu-text{
           margin-bottom: 60px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
 }
 .header1{
           text-align: center;
@@ -123,3 +135,13 @@ button{
           font-size: 18px;
           margin: 40px;
 } 
+
+.banner-center{
+          display: flex;
+          justify-content: space-between;
+          margin: 15px;
+          
+}
+.icon{
+          width: 24px;
+}
